# actix-jwt-auth-middleware

./: .gitignore  Cargo.toml  LICENSE  readme.md
.github/workflows/: check.yml  scheduled.yml  test.yml
derive/: Cargo.toml  readme.md
derive/src/: lib.rs
examples/: guard.rs  main.rs  non_rest.rs  rest.rs  simple.rs  simple_without_use_jwt.rs  simple_without_use_jwt_with_http_headers.rs
macros/: Cargo.toml  readme.md
macros/src/: lib.rs
src/: authority.rs  cookie_signer.rs  errors.rs  helper_macros.rs  jwt_required.rs  lib.rs  middleware.rs  rest_authority.rs  service.rs  token_signer.rs  use_jwt.rs  validate.rs
src/middleware/: authority.rs  middleware.rs  mod.rs  service.rs  transform.rs
src/non_rest/: authority.rs  middleware.rs  mod.rs  transform.rs
src/rest/: authority.rs  middleware.rs  mod.rs  service.rs  transform.rs
src/use_jwt/: app_and_scope.rs  mod.rs  resource.rs
src/use_jwt/app_and_scope/: mod.rs  non_rest.rs  rest.rs
src/use_jwt/resource/: mod.rs  non_rest.rs  rest.rs
tests/: test_tokens.rs
