[workspace]
members = ["derive", "./."]

[package]
name = "actix-jwt-auth-middleware"
version = "0.4.0"
edition = "2021"
authors = ["Michael van Straten"]
repository = "https://github.com/michaelvanstraten/actix-jwt-auth-middleware"
documentation = "https://docs.rs/actix-jwt-auth-middleware/"
keywords = [
    "web",
    "middleware",
    "authentication",
    "utility",
    "actix-web",
]
categories = [
    "authentication",
    "cryptography",
    "web-programming",
    "web-programming::http-server",
]
readme = "readme.md"
description = "This crate implements a JSON Webtoken (JWT) middleware for the actix-web framework."
license = "MIT"

[features]
use_jwt_on_resource = []

[dependencies]
serde = "1.0.145"
derive_builder = "0.11.2"
chrono = "0.4.22"
form_urlencoded = "1.1.0"

[dependencies.actix-jwt-auth-middleware-derive]
path = "derive"
version = "0.2"

[dependencies.actix-web]
version = "4.2.1"
default_features = false
features = ["cookies"]

[dependencies.jwt-compact]
version = "0.8.0"
default-features = false
features = ["std", "clock"]

[dev-dependencies]
exonum-crypto = "1.0.0"
lazy_static = "1.4.0"
actix-state-guards = "0.1.0"

[dev-dependencies.actix-web]
default-features = true

[dev-dependencies.serde]
features = ["derive"]

[dev-dependencies.jwt-compact]
features = ["exonum-crypto"]
