[package]
name = "actix-jwt-auth-middleware-derive"
version = "0.1.1"
edition = "2021"
authors = ["Michael van Straten"]
documentation = "https://docs.rs/actix-jwt-auth-middleware-derive/"
keywords = ["utility", "actix-web", "derive"]
categories = ["Authentication", "Cryptography"]
readme = "readme.md"
description = "This crate provides a derive macro for the actix-web::FromRequest trait"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.10"
syn = { version = "1.0", features = ["extra-traits"] }

[lib]
proc-macro = true

